--- a/.tmp/public/linker/modules/layout/header.html
+++ b/.tmp/public/linker/modules/layout/header.html
@@ -10,7 +10,7 @@
                         <ul class="menu">
                             <li><a href="http://twitter.com/quantumtravels" target="_blank"><i class="fa fa-twitter"></i> </a> </li>
                             <li><a href="http://facebook.com/quantumtravels" target="_blank"> <i class="fa fa-facebook"></i></a> </li>
-                            <li><a href="http://www.linkedin.com/company/quantum-travels-limited" target="_blank"><i class="fa fa-linkedin"></i></a> </li>
+                            <li><a href="http://linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a> </li>
                             <!--<li><a href="http://instagram.com" target="_blank"><i class="fa fa-instagram"></i> </a> </li>-->
                         </ul>
                     </nav>
@@ -37,14 +37,14 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active">
+                        <li ui-sref-active="active">
                             <a ui-sref="home">Home</a>
                         </li>
-                        <li><a ui-sref="about">About Us</a></li>
-                        <li><a ui-sref="services">Services</a></li>
-                        <li><a ui-sref="faq">FAQs</a></li>
-                        <li><a ui-sref="subsidiaries">Subsidiaries</a></li>
-                        <li><a ui-sref="contact">Contact Us</a></li>
+                        <li ui-sref-active="active"><a ui-sref="about">About Us</a></li>
+                        <li ui-sref-active="active"><a ui-sref="services">Services</a></li>
+                        <li ui-sref-active="active"><a ui-sref="faq">FAQs</a></li>
+                        <li ui-sref-active="active"><a ui-sref="subsidiaries">Subsidiaries</a></li>
+                        <li ui-sref-active="active"><a ui-sref="contact">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
