--- a/.tmp/public/linker/modules/layout/footer.html
+++ b/.tmp/public/linker/modules/layout/footer.html
@@ -56,7 +56,7 @@
         </div>
 
     </div>
-    <a ng-href  data-ng-click="toTop" id="toTop" style="display:inline">
+    <a ng-href  data-ng-click="alert('this was clicked')" id="toTop" style="display:inline">
         <span id="toTopHover" style="opacity: 1"></span>To Top
     </a>
 </footer>
