--- a/.tmp/public/linker/modules/layout/header.html
+++ b/.tmp/public/linker/modules/layout/header.html
@@ -22,10 +22,8 @@
         <div id="navOne" class="navbar navbar-wp" role="navigation" >
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle navbar-toggle-aside-menu">
-                        <i class="fa fa-outdent icon-custom"></i>
-                    </button>
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <button type="button" class="navbar-toggle btn navbar-btn" ng-init="navCollapsed = true"
+                            ng-click="navCollapsed = !navCollapsed">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -35,11 +33,11 @@
                         <img src="linker/images/quantum-text.png" alt="Quantum | The Travel Solutions Group">
                     </a>
                 </div>
-                <div class="navbar-collapse collapse">
+                <div collapse="navCollapsed" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li ui-sref-active="active">
                             <a ui-sref="home">Home</a>
-                        </li>
+                            </li>
                         <li ui-sref-active="active"><a ui-sref="about">About Us</a></li>
                         <li ui-sref-active="active"><a ui-sref="services">Services</a></li>
                         <li ui-sref-active="active"><a ui-sref="faq">FAQs</a></li>
