--- a/.tmp/public/linker/modules/layout/header.html
+++ b/.tmp/public/linker/modules/layout/header.html
@@ -1,4 +1,4 @@
-<div>
+<div data-ng-controller="HeaderController">
     <div class="top-header">
         <div class="container">
             <div class="row">
