--- a/assets/linker/modules/layout/footer.html
+++ b/assets/linker/modules/layout/footer.html
@@ -1,16 +1,16 @@
-<footer class="footer">
+<footer class="footer" data-ng-controller="FooterController">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
                 <div class="col">
                     <h4>Contact us</h4>
-                    <ul>
-                        <li>184A Corporation Drive,</li>
-                        <li>Dolphin Estate, Ikoyi</li>
-                        <li>Lagos.</li>
-                        <li>Phone: +234 709 873 3256 | Phone 2: +234 709 873 2833 </li>
-                        <li>Email: <a href="mailto:info@quantumtravelsng.com" title="Email Us">info@quantumtravelsng.com</a></li>
-                    </ul>
+
+                        <p>184A Corporation Drive,</p>
+                        <p>Dolphin Estate, Ikoyi</p>
+                        <p>Lagos.</p>
+                        <p>Phone: +234 709 873 3256 | Phone 2: +234 709 873 2833 </p>
+                        <p>Email: <a href="mailto:info@quantumtravelsng.com" title="Email Us">info@quantumtravelsng.com</a></p>
+
                 </div>
             </div>
 
@@ -49,14 +49,14 @@
                     <p>
                         The Complete Travel and Holiday solutions company for Corporates, Individuals and Families.
                         <br><br>
-                        <a href="#" class="btn btn-two">Use Our Travel Engine!</a>
+                        <a href="callto://+2347098733256" class="btn btn-two"><i class="fa fa-skype"></i> Skype Us today!</a>
                     </p>
                 </div>
             </div>
         </div>
 
     </div>
-    <a href="#"  id="toTop" style="display:inline">
+    <a ng-href  data-ng-click="toTop()" id="toTop" style="display:inline">
         <span id="toTopHover" style="opacity: 1"></span>To Top
     </a>
 </footer>
