--- a/.tmp/public/linker/modules/layout/header.html
+++ b/.tmp/public/linker/modules/layout/header.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-sm-12">
                 <span class="aux-text hidden-xs">
-                    Welcome to The Quantum Group: info@quantumtravelsng.com ,+234 1 815 0926
+                    Quantum Travels & Tours Ltd: info@quantumtravelsng.com ,+234 1 815 0926
                 </span>
                     <nav class="top-header-menu">
                         <ul class="menu">
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" ui-sref="home" title="Quantum | The Travel Solutions Group">
-                        <img src="linker/images/quantum-text.png" alt="Quantum | The Travel Solutions Group">
+                        <img src="linker/images/quantumtext2.png" class="img-responsive" alt="Quantum | The Travel Solutions Group">
                     </a>
                 </div>
                 <div collapse="navCollapsed" class="navbar-collapse collapse">
