--- a/.tmp/public/linker/modules/layout/header.html
+++ b/.tmp/public/linker/modules/layout/header.html
@@ -41,7 +41,7 @@
                         <li ui-sref-active="active"><a ui-sref="about">About Us</a></li>
                         <li ui-sref-active="active"><a ui-sref="services">Services</a></li>
                         <li ui-sref-active="active"><a ui-sref="faq">FAQs</a></li>
-                        <li ui-sref-active="active"><a ui-sref="subsidiaries">Subsidiaries</a></li>
+                        <li ui-sref-active="active"><a ui-sref="expressions">Expressions</a></li>
                         <li ui-sref-active="active"><a ui-sref="contact">Contact Us</a></li>
                     </ul>
                 </div>
