--- a/.tmp/public/linker/modules/layout/footer.html
+++ b/.tmp/public/linker/modules/layout/footer.html
@@ -49,7 +49,7 @@
                     <p>
                         The Complete Travel and Holiday solutions company for Corporates, Individuals and Families.
                         <br><br>
-                        <a href="callto://+2347098733256" class="btn btn-two"><i class="fa fa-skype"></i> Skype Us today!</a>
+                        <a href="skype:QuantumTravels?call" class="btn btn-two"><i class="fa fa-skype"></i> Skype Us today!</a>
                     </p>
                 </div>
             </div>
