--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -128,6 +128,7 @@
     <script src="/linker/app.js"></script>
     <script src="/linker/directives/layerSlider.js"></script>
     <script src="/linker/directives/scrollTo.js"></script>
+    <script src="/linker/factory/toastFactory.js"></script>
     <script src="/linker/modules/about/about.js"></script>
     <script src="/linker/modules/contact/contact.js"></script>
     <script src="/linker/modules/home/home.js"></script>
@@ -147,6 +148,8 @@
     <script src="/linker/vendors/layerslider/js/layerTransition.js"></script>
     <script src="/linker/vendors/parallax/js/jquery.cslider.js"></script>
     <script src="/linker/vendors/parallax/js/modernizr.js"></script>
+    <script src="/linker/vendors/toastr.js"></script>
+    <script src="/linker/vendors/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
