--- a/.tmp/public/linker/modules/layout/header.html
+++ b/.tmp/public/linker/modules/layout/header.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-sm-12">
                 <span class="aux-text hidden-xs">
-                    Quantum Travels Limited: info@quantumtravelsng.com ,+234 1 815 0926
+                    Quantum Travels & Tours Ltd: info@quantumtravelsng.com ,+234 1 815 0926
                 </span>
                     <nav class="top-header-menu">
                         <ul class="menu">
@@ -22,7 +22,8 @@
         <div id="navOne" class="navbar navbar-wp" role="navigation" >
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle btn navbar-btn" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
+                    <button type="button" class="navbar-toggle btn navbar-btn" ng-init="navCollapsed = true"
+                            ng-click="navCollapsed = !navCollapsed">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -39,8 +40,8 @@
                             </li>
                         <li ui-sref-active="active"><a ui-sref="about">About Us</a></li>
                         <li ui-sref-active="active"><a ui-sref="services">Services</a></li>
-                        <!--<li ui-sref-active="active"><a ui-sref="faq">FAQs</a></li>-->
-                        <li ui-sref-active="active"><a ui-sref="expressions">Expressions</a></li>
+                        <li ui-sref-active="active"><a ui-sref="faq">FAQs</a></li>
+                        <li ui-sref-active="active"><a ui-sref="subsidiaries">Subsidiaries</a></li>
                         <li ui-sref-active="active"><a ui-sref="contact">Contact Us</a></li>
                     </ul>
                 </div>
