--- a/assets/linker/modules/layout/footer.html
+++ b/assets/linker/modules/layout/footer.html
@@ -9,7 +9,7 @@
                         <p>Dolphin Estate, Ikoyi</p>
                         <p>Lagos.</p>
                         <p>Phone: +234 709 873 3256 | Phone 2: +234 709 873 2833 </p>
-                        <p>Email: <a href="mailto:info@quantumtravelsng.com" title="Email Us">info@quantumtravelsng.com</a></p>
+                        <p class="footerLinks">Email: <a href="mailto:info@quantumtravelsng.com" title="Email Us" >info@quantumtravelsng.com</a></p>
 
                 </div>
             </div>
@@ -49,7 +49,7 @@
                     <p>
                         The Complete Travel and Holiday solutions company for Corporates, Individuals and Families.
                         <br><br>
-                        <a href="callto://+2347098733256" class="btn btn-two"><i class="fa fa-skype"></i> Skype Us today!</a>
+                        <a href="skype:QuantumTravels?call" class="btn btn-two"><i class="fa fa-skype"></i> Skype Us today!</a>
                     </p>
                 </div>
             </div>
