--- a/assets/linker/modules/layout/header.html
+++ b/assets/linker/modules/layout/header.html
@@ -3,13 +3,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                <span class="aux-text hidden-xs">
+                    <span class="aux-text hidden-xs">
                     Quantum Travels Limited: info@quantumtravelsng.com ,0700 QUANTUM, 01-4604740,01-4604741
                 </span>
                     <nav class="top-header-menu">
                         <ul class="menu">
                             <li><a href="http://twitter.com/quantumtravels" target="_blank"><i class="fa fa-twitter"></i> </a> </li>
-                            <li><a href="http://facebook.com/quantumtravels" target="_blank"> <i class="fa fa-facebook"></i></a> </li>
+                            <li>
+                                <a href="http://facebook.com/quantumtravels" target="_blank"> <i class="fa fa-facebook"></i></a>
+                            </li>
                             <li><a href="http://linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a> </li>
                             <!--<li><a href="http://instagram.com" target="_blank"><i class="fa fa-instagram"></i> </a> </li>-->
                         </ul>
@@ -19,7 +21,7 @@
         </div>
     </div>
     <header>
-        <div id="navOne" class="navbar navbar-wp" role="navigation" >
+        <div id="navOne" class="navbar navbar-wp" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle btn navbar-btn" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
@@ -29,14 +31,14 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" ui-sref="home" title="Quantum | The Travel Solutions Group">
-                        <img src="linker/images/quantumtext2.png" class="img-responsive" alt="Quantum | The Travel Solutions Group">
+                        <img src="linker/images/logo.png" class="img-responsive" alt="Quantum | The Travel Solutions Group">
                     </a>
                 </div>
                 <div collapse="navCollapsed" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li ui-sref-active="active">
                             <a ui-sref="home">Home</a>
-                            </li>
+                        </li>
                         <li ui-sref-active="active"><a ui-sref="about">About Us</a></li>
                         <li ui-sref-active="active"><a ui-sref="services">Services</a></li>
                         <!--<li ui-sref-active="active"><a ui-sref="faq">FAQs</a></li>-->
